select a unit with q, then drop him off at any other cell using q.  Or after selecting you can use the arrow keys to control him as well.  Next step is to implement the restricted range movement.

--- a/.cproject
+++ b/.cproject
@@ -19,7 +19,7 @@
 							<builder buildPath="${workspace_loc:/FriendlyFire/Debug}" id="cdt.managedbuild.tool.gnu.builder.mingw.base.1985818746" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="CDT Internal Builder" superClass="cdt.managedbuild.tool.gnu.builder.mingw.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug.109087447" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug">
 								<option id="gnu.both.asm.option.include.paths.1049250103" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;F:\devtools\SFML-2.0\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\devtools\SFML-2.0\include&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.537997925" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -31,7 +31,7 @@
 									<listOptionValue builtIn="false" value="SFML_DYNAMIC"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.include.paths.1895200831" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;F:\devtools\SFML-2.0\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\devtools\SFML-2.0\include&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.2108467549" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -43,7 +43,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug.1340549842" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug.1385885826" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug">
 								<option id="gnu.cpp.link.option.paths.195503794" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-									<listOptionValue builtIn="false" value="&quot;F:\devtools\SFML-2.0\lib&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\devtools\SFML-2.0\lib&quot;"/>
 								</option>
 								<option id="gnu.cpp.link.option.libs.1487931848" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="sfml-graphics-d"/>
@@ -123,8 +123,13 @@
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
 		<project id="FriendlyFire.cdt.managedbuild.target.gnu.mingw.exe.591794590" name="Executable" projectType="cdt.managedbuild.target.gnu.mingw.exe"/>
 	</storageModule>
-	<storageModule moduleId="refreshScope" versionNumber="1">
-		<resource resourceType="PROJECT" workspacePath="/IsometricEmblem"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/IsometricEmblem"/>
+		</configuration>
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/IsometricEmblem"/>
+		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="scannerConfiguration">
@@ -142,4 +147,5 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 </cproject>
